# maive

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cursor/: mcp.json
apps/backend/: .coverage  README.md  example_usage.py  pyproject.toml
apps/backend/src/backend/: __init__.py
apps/backend/src/backend/rilla/: README.md  __init__.py  config.py  models.py
apps/backend/tests/: test_rilla.py
apps/server/: .gitignore  Dockerfile  openapi.json  package.json  pyproject.toml  ruff.toml  turbo.json
apps/server/alembic/: env.py
apps/server/alembic/versions/: 2025-11-19_add_recording_url_to_calls.py  2025-11-19_rename_twilio_config_to_phone_numbers.py  500e69adfc16_create_scheduled_groups_tables.py  82986719e63e_merge_migration_heads.py  af7b2a60dd99_add_threads_and_messages_tables.py  b6c0b448deb6_merge_twilio_config_migration.py  ba8c60a76780_create_calls_table.py  d1589b6ca2c7_create_call_list_table.py  d50a3b7efc68_add_transcript_to_calls.py  d7e7b31d766f_add_unique_constraint_to_organization_.py  e28f9d9b8c42_create_users_table.py  ecfad63f38d7_create_organizations_and_crm_.py  f4d9791102c4_merge_second_set_of_migration_heads.py  f8a9c5b4d3e2_add_organization_twilio_config_table.py
apps/server/evals/estimate_deviation/: ERROR_LOGGING.md  LABELING.md  README.md  classes.json  dataset.json  fetch_dataset.py  fetch_pricebook_items.py  labels.md  manage_dataset.py  prelabel.py  run_braintrust_eval.py  run_eval.py  schemas.py  scorers.py  view_errors.py
apps/server/evals/estimate_deviation/label_archive/: aa8f65aa-fe79-4c12-825b-9862dbe7e08c.yaml  cbea9f78-df57-41c0-8bbd-63001e098ef3.yaml  f3a7203d-29b6-441e-9e89-1198378410bb.yaml
apps/server/evals/estimate_deviation/rilla/: Rilla-Usage-10-01-to-10-09.csv  download_audio_transcripts.py  export_rilla_links_csv.py  fetch_dataset.py  simplify_transcript.py
apps/server/scripts/: check_job_project_dates.py  clean_pricebook.py  export_rilla_links_csv.py  fetch_job_estimates.py  fetch_pricebook_items.py  find_rilla_links.py  generate_openapi.py  ingest_apify.py  ingest_building_codes.py  ingest_local_codes.py  ingest_pricebook.py  ingest_pricebook_gemini.py
apps/server/src/: config.py  main.py  vapi_app.py  vertex_app.py
apps/server/src/ai/: base.py
apps/server/src/ai/chat/: IMPLEMENTATION.md  __init__.py  router.py  service.py  system_prompt.md
apps/server/src/ai/gemini/: __init__.py  client.py  config.py  exceptions.py  schemas.py
apps/server/src/ai/openai/: __init__.py  config.py  exceptions.py
apps/server/src/ai/providers/: __init__.py  factory.py  gemini.py  openai.py
apps/server/src/ai/rag/: README.md  __init__.py  ingestion_service.py  metadata.py  schemas.py  service.py  vector_store_service.py
apps/server/src/auth/: config.py  constants.py  dataclasses.py  dependencies.py  provider_factory.py  router.py  schemas.py  service.py
apps/server/src/db/: README.md  __init__.py  call_state_service.py  config.py  database.py  dependencies.py  dynamodb_client.py  models.py  tests.py
apps/server/src/integrations/: __init__.py
apps/server/src/utils/: braintrust_tracing.py  logger.py  rilla.py
apps/server/src/workflows/: call_monitoring.py  classes.json  config.py  constants.py  dependencies.py  discrepancy_detection.py  discrepancy_detection_prompt.md  discrepancy_detection_v2.py  find_form_submissions.py  project_summary.py  router.py  schemas.py
infra/: .gitignore  Pulumi.david-dev.yaml  Pulumi.prod.yaml  Pulumi.staging.yaml  Pulumi.test.yaml  Pulumi.will-dev.yaml  Pulumi.yaml  README.md  __main__.py  deploy.py  package.json  pyproject.toml  ruff.toml  run_migration.py
(+1212 files in other folders)
