[project]
name = "infra"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.41.1",
    "pulumi>=3.182.0",
    "pulumi-aws>=6.83.0",
    "pulumi-docker>=4.8.0",
    "pulumi-docker-build>=0.0.12",
    "pulumi-esc-sdk>=0.12.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]
