[project]
name = "backend"
version = "0.1.0"
description = "Python Backend Services"
readme = "README.md"
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
dependencies = [
    "fastapi[standard]>=0.115.14",
    "pydantic-settings>=2.10.1",
    "boto3>=1.39.3",
    "cryptography>=45.0.5",
    "httpx>=0.27.0",
]

[dependency-groups]
auth = [
    "boto3>=1.39.3",
    "cryptography>=45.0.5",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.1",
    "httpx>=0.27.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
]

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "BLE", "C4", "T10", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "PLR0913", "PLR0912", "PLR0915", "PLR2004", "TRY003", "EM101", "EM102"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "PLR2004", "SLF001", "PT011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
