[project]
name = "server"
version = "0.1.0"
description = "FastAPI Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "pydantic-settings>=2.10.1",
    "boto3>=1.39.3",
    "cryptography>=45.0.5",
    "phonenumbers>=9.0.15",
    "google-genai>=1.39.1",
    "openai>=1.59.7",
    "tqdm>=4.67.1",
    "vapi-server-sdk>=1.7.2",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "pypdf>=5.1.0",
    "httpx>=0.28.1",
]

[dependency-groups]
auth = [
    "boto3>=1.39.3",
    "cryptography>=45.0.5",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.1",
    "tqdm>=4.67.1",
]

[tool.uv]
default-groups = "all"
